@@ -190,6 +190,17 @@ class RemoteBarclaycardSmartpayTest < Test::Unit::TestCase
     assert_equal '[capture-received]', response.message
   end
 
+  def test_successful_purchase_with_shopper_statement
+    response = @gateway.purchase(
+      @amount,
+      @credit_card,
+      @options.merge(shopper_statement: 'One-year premium subscription')
+    )
+
+    assert_success response
+    assert_equal '[capture-received]', response.message
+  end
+
   def test_successful_authorize_with_3ds
     assert response = @gateway.authorize(@amount, @three_ds_enrolled_card, @options.merge(execute_threed: true))
     assert_equal 'RedirectShopper', response.message
